--- a/index.html
+++ b/index.html
@@ -7,24 +7,33 @@
 </head>
 
 <body>
-	<div id="headbar"><br></br><img src="codefactory-vienna-1.png" alt="logo">
-		Matthias Liszt - Future Full Stack Web Developer<br></br></div>
-		<div id="navbar">
-	
-		<ul>
-			<li>Home</li>
-			<li>About me</li>
-			<li>Blog</li>
-			<li>Contact</li>
-		</ul>	
-		</div>
-		<main>
-			<figure><img src="ae0fa98c8f9a6dd8674d34be2f82b935_XL.jpg" alt="three people"><figcaption>Social spot for developers</figcaption></figure>
-			<figure><img src="sound-speaker-radio-microphone-1024x683.jpg" alt="radio"><figcaption>Land in sight - Guest CodeFactory</figcaption></figure>
-			<figure><img src="INBOX7379.jpeg" alt="codemonkey"><figcaption>By profession:"Code Monkey"</figcaption></figure>
-			<figure><img src="90.235.jpg" alt="two children"><figcaption>EU CodeWeek:"Programmieren genauso wichtig wie Latein"</figcaption></figure>
+	<div id="headbar"><br></br><h1><img src="codefactory-vienna-1.png" alt="logo">
+	Matthias Liszt - Future Full Stack Web Developer</h1><br></br></div>
+	<div id="navbar">
 
-		</main>
-		<footer><br></br>Matthias Liszt - CodeFactory<br></br></footer>
-	</body>
-	</html>
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li>About me
+				<p><a href="https://codepen.io/mahagugu">CodePen Profile&emsp;</a></p>
+				<p><a href="https://matthiasliszt.github.io">GitHub Profile&emsp;</a></p>
+			</li>
+			<li>
+				<a href="https://coding4lifeblog.wordpress.com/">Blog&emsp;</a>
+			</li>
+			<li><a href="mailto:matthias.liszt@gmail.com">Contact</a></li>
+		</ul>	
+	</div>
+	<main>
+		<div id="firstPicturePair">
+		<figure><a href="https://www.awwwards.com/10-social-networks-for-developers.html"><img src="INBOX7379.jpeg" alt="three people"></a><figcaption>Social spot for developers</figcaption></figure>
+		<figure><a href="https://codefactory.wien"><img src="sound-speaker-radio-microphone-1024x683.jpg" alt="radio"></a><figcaption>Land in sight - Guest CodeFactory</figcaption></figure>
+		</div>
+		<div id="secondPicturePair">
+		<figure><a href="https://coding4lifeblog.wordpress.com/"><img src="ae0fa98c8f9a6dd8674d34be2f82b935_XL.jpg" alt="codemonkey"></a><figcaption>By profession:"Code Monkey"</figcaption></figure>
+		<figure><a href="https://codeweek.eu"><img src="90.235.jpg" alt="two children"></a><figcaption>EU CodeWeek:"Programmieren genauso wichtig wie Latein"</figcaption></figure>
+		</div>
+
+	</main>
+	<footer><br></br>Matthias Liszt - CodeFactory<br></br></footer>
+</body>
+</html>
