--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 <figcaption>By profession:"Code Monkey"</figcaption>
             </figure>
             <figure><a href="http://codeweek.eu"><img src="90.235.jpg" alt="two children"></a>
-                <figcaption>EU CodeWeek:"Programmieren genauso wichtig wie Latein"</figcaption>
+                <figcaption><p>EU CodeWeek:"Programmieren</p><p> genauso wichtig wie Latein"</p></figcaption>
             </figure>
         </div>
     </main>
